# wamr-playground

./: .gitignore  .gitmodules  Makefile  README.md
host-freertos/: CMakeLists.txt  FreeRTOSConfig.h  stm32_platform.cmake  stm32l476rg.ld
host-freertos/src/: main.c  platform_freertos.c  platform_internal.h  startup_stm32l476rg.c  supervisor.c  supervisor.h  uart_loader.c  wasm_runner.c  wasm_runner.h
host-maclinux/: CMakeLists.txt  main.c
host-stm32/: CMakeLists.txt  embed_wasm.cmake  stm32_platform.cmake
host-stm32/src/: main.c  platform_internal.h  platform_stm32.c  startup_stm32l476rg.c
host-zephyr/: CMakeLists.txt  Dockerfile  build.sh  prj.conf  west_lite.yml
host-zephyr/boards/: nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.overlay
host-zephyr/src/: main.c  native_api.c  native_api.h  supervisor.c  uart_loader.c  uart_loader.h  wasm_flash.c  wasm_flash.h  wasm_hello.h  wasm_runner.c  wasm_runner.h
tools/: wasm_send.py
wasm-apps/: actuator.c  alert.c  alert_updated.c  hello.c  hello_small.c  ota_test.c  sensor.c
